--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.9.3",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.14",
     "react": "^18.2.0",
