--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 astroid==2.11.7
+attrs==22.1.0
 autopep8==1.6.0
 click==8.1.3
 dill==0.3.5.1
@@ -8,19 +9,23 @@ Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.5.1
 flask-sqlalchemy-stubs==0.2
 greenlet==1.1.2
+importlib-resources==5.9.0
 isort==5.10.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jsonschema==4.9.1
 lazy-object-proxy==1.7.1
 MarkupSafe==2.1.1
 mccabe==0.7.0
 mypy==0.971
 mypy-extensions==0.4.3
+pkgutil-resolve-name==1.3.10
 platformdirs==2.5.2
 psycopg2-binary==2.9.3
 pycodestyle==2.9.1
 pylint==2.14.5
 PyMySQL==1.0.2
+pyrsistent==0.18.1
 python-dotenv==0.12.0
 six==1.16.0
 SQLAlchemy==1.4.39
@@ -36,3 +41,4 @@ types-Werkzeug==1.0.7
 typing-extensions==4.3.0
 Werkzeug==2.0.1
 wrapt==1.14.1
+zipp==3.8.1
